# comfyui-dream-painter

./: __init__.py  install.py  node_list.json  pyproject.toml  readme.md  requirements.txt
conf/: __init__.py  categories.py  config.py
core/: __init__.py  bitcanvas.py  bitmap.py  config.py  images.py  shape.py  vector.py
dreamnodes/: __init__.py  bitmapops.py  bitmaputil.py  converters.py  genericnodes.py  patterns.py  shapenodes.py
examples/: butterfly.json  checkerboard.json  rays_of_color.json
nodes/: __init__.py  converters.py
