[project]
name = "comfyui-dream-painter"
description = "Provide utilities for 2D image generation and processing."
version = "0.0.1"
license = { file = "LICENSE" }
dependencies = ["imageio", "pilgram", "scipy", "numpy<2.0,>=1.18", "torchvision", "evalidate", "drawsvg~=2.0", "svglib"]

[project.urls]
Repository = "https://github.com/alt-key-project/comfyui-dream-painter"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "altkeyproject"
DisplayName = "Dream Painter"
Icon = ""
